2000-05-23  Kenneth Christiansen <kenneth@gnu.org>

        * desk.pl: Ported some of the shell command inclucion
          to perl. This fixes the problems when you have onle
          one .desktop file in your dir (+ subdirs)

          Is now also more extentable, and will soon be 100%
          pure perl. ie. no shell commands! This will be 
          followed up by a nice touch, so be ware translators!

2000-05-22  Kenneth Christiansen <kenneth@gnome.org>

        * desk.pl: Small fixes. Found a bug that I need to fix
          tomorrow. Now I am soon ready to add status also.

2000-05-21  Kenneth Christiansen <kenneth@gnome.org>

        * desk.pl: Cool, now it's almost pure perl...not all that
          shell including :)

2000-05-21  Kenneth Christiansen <kenneth@gnome.org>

        * desk.pl: Cool, now everything in this script is working
          like it is supposed to!! Even incooperated some Kmaraas
          suggestions

2000-05-21  Kenneth Christiansen <kenneth@gnome.org>

        * desk.pl: Great updates :) Now takes --help --version
          checks for wrong options, et al.

2000-05-21  Kenneth Christiansen <kenneth@gnome.org>

        * desk.pl: Small updates

2000-05-21  Kenneth "Quaniquus" Christiansen <kenneth@gnome.org>

        * temporaly name change: Started to call myself 
          Quaniquus on irc, since BitchX is stupid

        * desk.pl: Added script to put in your root cvs dir.
          Then run for instance ./desk.pl da and you will get
          a list of all desktop files missing da! :) 

2000-05-07  Valek Filippov  <frob@df.ru>

	* genreport-new.pl: updated by kmaraas and frob.

2000-04-22  Fatih Demir	<kabalak@gmx.net>
	
	* ./tr : Added a Turkish subdir .

2000-04-15  Karl EICHWALDER  <ke@suse.de>

	* de: New directory.

2000-04-03  Robert Brady  <rwb197@zepler.org>

	* en_GB/en_GB.pl: adds list of locales en_GB will work for. There
	are rather a lot of them (and I've only barely started research...)
