@@ -1,5 +1,10 @@
 2000-05-23  Kenneth Christiansen <kenneth@gnu.org>
 
+        * update.pl: updte.sh ported to perl...pretty close
+          to perfect...translators please test test test!!
+
+2000-05-23  Kenneth Christiansen <kenneth@gnu.org>
+
         * desk.pl: Ported some of the shell command inclucion
           to perl. This fixes the problems when you have onle
           one .desktop file in your dir (+ subdirs)
